crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__runtime__set-get-variables-v1.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/runtime/set-get-variables-v1
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "Set variable from code to 15" (0) -> 0]
> "KO\n" [Ended]
outcome: Ended
