crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__runtime__variable-observers.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/runtime/variable-observers
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "Sets x = 10" (0) -> 0]
> "Sets x = 10\n" [Ended]
outcome: Ended
